# CIS415

./: Assignment1.docx  CMakeLists.txt  README.md  lab4.tgz
Assignments/: Assignment2.docx
Book/: bbarnes2-project1.tgz
Notes/: lab2.txt  lab3.txt  w8d1.txt  w8d2.txt
Notes/lab4/: Makefile
Project0/: CMakeLists.txt  MakefilePrechange.txt  finddupl  finddupl.c  mentry.c  mlist.c
Project1/: Makefile  file.txt  helloWorld.c  setitimer  setitimer.c  signal  t.c  test.c  testinput.txt  uspsv1  uspsv1.c  uspsv2  uspsv2.c  uspsv3.c  uspsv4  uspsv4.c
Project1/final/: a.out  file.txt  test.c  usps.c
Project1/testsend/: daddy.c  mom.c  testinput.txt
Projects/: bbarnes2-project0.tgz  bbarnes2-project1.tgz
Projects/FINALPROJECT0/: report.txt
Projects/Project0/: Makefile  finddupl
Projects/Project1/: CMakeLists.txt  a.out  child_handler  child_handler.c  file.txt  helloWorld  test.c  testsend.tar  uspsv1.c  uspsv2.c  uspsv3  uspsv3.c  uspsv4.c
Projects/Project1/final/: Makefile  report.txt
Projects/Project1/testsend/: bogosort.c  iamyour.c
Projects/Project2/: CMakeLists.txt  Project2Start64bit.tgz
Projects/Project2/Project2Start64bit/: mydemo  networkdriver.c
Projects/bbarnes2/: setitimer.c  signal.c
lab4/: lab4  lab4-start.c  lab4.c
